--- a/package.json
+++ b/package.json
@@ -3,16 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.15.3",
+    "body-parser": "^1.17.1",
+    "boom": "^4.2.0",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.2",
+    "humps": "^2.0.0",
+    "jsonwebtoken": "^7.3.0",
+    "knex": "^0.12.7",
+    "morgan": "^1.8.1",
+    "pg": "^6.1.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "react-scripts": "0.9.4"
   },
+  "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "7.7.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & nodemon server/bin/www",
+    "start-prod": "env PORT=3000 nodemon server/bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "knex": "knex"
   }
 }
