--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.27.0",
     "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "boom": "^4.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "exif-js": "^2.1.1",
     "express": "^4.15.2",
     "humps": "^2.0.0",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
+    "moment": "^2.17.1",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.5.0",
+    "node-uuid": "^1.4.7",
     "pg": "^6.1.3",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2"
   },
