--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "superagent": "^3.5.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.4"
