--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^4.0.0",
     "exif-js": "^2.1.1",
     "express": "^4.15.2",
+    "express-fileupload": "^0.1.2",
     "humps": "^2.0.0",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
