--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "aws-sdk": "^2.27.0",
     "axios": "^0.15.3",
+    "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.17.1",
     "boom": "^4.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "exif-js": "^2.1.1",
     "express": "^4.15.2",
-    "express-fileupload": "^0.1.2",
     "humps": "^2.0.0",
     "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.7",
@@ -20,14 +20,17 @@
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
     "node-uuid": "^1.4.7",
+    "nodemailer": "^3.1.7",
     "pg": "^6.1.3",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "sha256": "^0.2.0",
     "superagent": "^3.5.0"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "react-scripts": "0.9.4"
   },
   "proxy": "http://localhost:3001",
