--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-toastr": "^2.8.2",
     "sha256": "^0.2.0",
     "superagent": "^3.5.0"
   },
