--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
-    "node-uuid": "^1.4.7",
     "nodemailer": "^3.1.7",
     "pg": "^6.1.3",
     "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
+    "react-dropzone": "^3.12.2",
     "react-router": "^3.0.2",
     "react-toastr": "^2.8.2",
     "sha256": "^0.2.0",
