--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.2",
+    "react-responsive-carousel": "^3.1.5",
     "react-router": "^3.0.2",
     "react-toastr": "^2.8.2",
     "sha256": "^0.2.0",
